<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:mvvm="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.swarmnyc.mvvmlib.sampleapp.viewmodel.FirstViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data To Pass"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            mvvm:text="@{viewmodel.dataToPass}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick='@{()-> viewmodel.navToThird()}'
            android:text="Navigate To Third Layout by ViewModel"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data Pass From Other"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="No Data Passed"
            android:text="@{viewmodel.passedData}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Close by Adapter"
            mvvm:close='@{0}'/>
    </LinearLayout>
</layout>